Update Machine Learning models.ipynb

--- a/Machine Learning models.ipynb
+++ b/Machine Learning models.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 1,
    "id": "37e936e1",
    "metadata": {},
    "outputs": [],
@@ -16,13 +16,155 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 2,
    "id": "0e4f0fcd",
    "metadata": {},
    "outputs": [],
    "source": [
     "train = pd.read_csv(\"train.csv\")\n",
     "test = pd.read_csv(\"test.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "4f097ea3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>total_day_minutes</th>\n",
+       "      <th>total_day_calls</th>\n",
+       "      <th>total_day_charge</th>\n",
+       "      <th>total_eve_minutes</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>161.6</td>\n",
+       "      <td>123</td>\n",
+       "      <td>27.47</td>\n",
+       "      <td>195.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>243.4</td>\n",
+       "      <td>114</td>\n",
+       "      <td>41.38</td>\n",
+       "      <td>121.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>299.4</td>\n",
+       "      <td>71</td>\n",
+       "      <td>50.90</td>\n",
+       "      <td>61.9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>166.7</td>\n",
+       "      <td>113</td>\n",
+       "      <td>28.34</td>\n",
+       "      <td>148.3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>218.2</td>\n",
+       "      <td>88</td>\n",
+       "      <td>37.09</td>\n",
+       "      <td>348.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4245</th>\n",
+       "      <td>188.3</td>\n",
+       "      <td>70</td>\n",
+       "      <td>32.01</td>\n",
+       "      <td>243.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4246</th>\n",
+       "      <td>177.9</td>\n",
+       "      <td>89</td>\n",
+       "      <td>30.24</td>\n",
+       "      <td>131.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4247</th>\n",
+       "      <td>170.7</td>\n",
+       "      <td>101</td>\n",
+       "      <td>29.02</td>\n",
+       "      <td>193.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4248</th>\n",
+       "      <td>235.7</td>\n",
+       "      <td>127</td>\n",
+       "      <td>40.07</td>\n",
+       "      <td>223.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4249</th>\n",
+       "      <td>129.4</td>\n",
+       "      <td>102</td>\n",
+       "      <td>22.00</td>\n",
+       "      <td>267.1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>4250 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      total_day_minutes  total_day_calls  total_day_charge  total_eve_minutes\n",
+       "0                 161.6              123             27.47              195.5\n",
+       "1                 243.4              114             41.38              121.2\n",
+       "2                 299.4               71             50.90               61.9\n",
+       "3                 166.7              113             28.34              148.3\n",
+       "4                 218.2               88             37.09              348.5\n",
+       "...                 ...              ...               ...                ...\n",
+       "4245              188.3               70             32.01              243.8\n",
+       "4246              177.9               89             30.24              131.2\n",
+       "4247              170.7              101             29.02              193.1\n",
+       "4248              235.7              127             40.07              223.0\n",
+       "4249              129.4              102             22.00              267.1\n",
+       "\n",
+       "[4250 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train[[\"total_day_minutes\", \"total_day_calls\", \"total_day_charge\",\"total_eve_minutes\" ]]"
    ]
   },
   {
