--- a/Machine Learning models.ipynb
+++ b/Machine Learning models.ipynb
@@ -1,14 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c24aeff1",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "id": "4692780d",
    "metadata": {},
@@ -104,7 +96,7 @@
     "                            roc_auc_score,\n",
     "                            confusion_matrix,\n",
     "                            classification_report,\n",
-    "                            roc_curve)\n"
+    "                            roc_curve)"
    ]
   },
   {
